Release 0.6.3
=============

- Use `overrides` to enforce sanity in class inheritance.


Release 0.6.2
=============

- GcpUpath: refresh cache upon timeout error.


Release 0.6.1.post1
===================

- Relax version requirements on dependencies.


Release 0.6.1
=============

- Minor fine-tuning.


Release 0.6.0.post1
===================

- Bug fix.


Release 0.6.0

=============

- Bug fix in GcpBlobUpath


Release 0.5.9
=============

- Removed async methods, since the current simplementations are simply wrappers around thread-pool executions.


Release 0.5.8
=============

- Refactor the `__init__` method.
- Efficiency improvements for GCP.


Release 0.5.7
=============

- Capture use-specified exceptions and retry in operations on multiple blobs.


Release 0.5.6
=============

- Bug fixes and improvements to GcpBlobUpath.


Release 0.5.5
=============

- Bug fix related to GCP.


Release 0.5.4
=============

- Implement blob locking for GCP.


Release 0.5.3
=============

- Improvements to 'lock' methods.


Release 0.5.2
=============

- Skip thread pool when `concurrency <= 1`.
- Support extra dependencies via `options.extras_require` in `setup.cfg`.


Release 0.5.1
=============

- Reworked `AzureBlobUpath.lock` and `AzureBlobUpath.a_lock`.


Release 0.5.0
=============

- `remove_file` loses argument `missing_ok`. Return 0 if file is not found.
- `GcpBlobUpath` copy, download, upload, rename.
- `BlobUpath` gets more methods for download and upload, which are thin wrappers
  around export and import methods.


Release 0.4.9
=============

- Another round of API fine tuning. There are some improvements to naming,
  consistency, and simplicity.
- `AzureBlobUpath` has custom blob copying, uploading, downloading.
- Improvements to tests.


Release 0.4.5
=============

- Remove `AzureBlobUpath` and `GcpBlobUpath` from package `__init__.py`,
  making their dependencies optional in a future release.


Release 0.4.3
=============
