@@ -19,9 +19,9 @@ echo
 python -m flake8 --ignore E501,W503 ${SRC}
 
 echo
-echo --- running mypy ---
+#echo --- running mypy ---
 echo
-python -m mypy --show-error-codes --disable-error-code import ${SRC}
+#python -m mypy --show-error-codes --disable-error-code import ${SRC}
 
 echo
 echo --- running pylint ---
