@@ -2,6 +2,7 @@ Release 0.6.3
 =============
 
 - Use `overrides` to enforce sanity in class inheritance.
+- Add tests on GCP using mocking.
 
 
 Release 0.6.2
